--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Creating Devops Team
       run: |
         echo "Login to GitHub"
-        curl -i -u ${{secrets.USR_NAM}}:${{secrets.PASS}} https://api.github.com/user/ranjithchannabasappa
+        curl \ -H "Accept: application/vnd.github.v3+json" \ https://api.github.com/users/ranjithchannabasappa
