--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Creating Devops Team
       run: |
         echo "Login to GitHub"
-        curl https://api.github.com/users/ranjithchannabasappa
+        curl -i -u ranjithchannabasappa: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 https://api.github.com/users/ranjithchannabasappa
