--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Creating Devops Team
       run: |
         echo "Login to GitHub"
-        curl -H "Accept: application/vnd.github.v3+json" https://api.github.com/users/ranjithchannabasappa/repos
+        curl -H "Authorization: token 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" https://api.github.com/users/ranjithchannabasappa
