--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,4 +23,4 @@ jobs:
         distribution: 'adopt'
         
     - name: Creating Devops Team
-      run: curl -i -H "Authorization:token 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" https://api.github.com/user/repos
+      run: curl -u ranjithchannabasappa:sLRs6rc$ -H "Accept:application/vnd.github.v3+json" https://api.github.com/users/ranjithchannabasappa/repos
